--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jasmine": "~5.1.0",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.4.0",
     "jsdom": "^22.0.0",
     "karma": "~6.4.0",
@@ -51,7 +52,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.49",
     "storybook": "^8.4.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^2.1.8"
